--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,31 +34,26 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.api-client:google-api-client:1.31.5'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.31.5'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev20210121-1.31.0'
+    implementation 'com.google.api-client:google-api-client:2.2.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
+    implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.25.0'
     implementation 'com.google.apis:google-api-services-drive:v3-rev20211207-1.32.1'
-    implementation 'com.google.oauth-client:google-auth-library-oauth2-http:1.2.0'
     implementation 'com.google.android.gms:play-services-drive:19.0.0'
-    implementation 'com.google.api-client:google-api-client:1.31.5'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.31.5'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.31.2'
+    implementation 'com.google.oauth-client:google-auth-library-oauth2-http:1.2.0'
     implementation 'net.fortuna.ical4j:ical4j-data:3.0.27'
     //noinspection UseOfBundledGooglePlayServices
     implementation 'com.google.android.gms:play-services:19.0.0'
-    implementation 'com.google.api-client:google-api-client:1.31.5'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.31.5'
-    implementation 'com.google.oauth-client:google-oauth-client:1.31.5'
-    implementation 'com.google.http-client:google-http-client-jackson2:1.38.0'
-    implementation 'com.google.auth:google-auth-library-oauth2-http:0.26.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.43.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
