--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,10 @@ android {
 
 dependencies {
     implementation 'com.google.api-client:google-api-client:2.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.25.0'
     implementation 'com.google.apis:google-api-services-drive:v3-rev20211207-1.32.1'
     implementation 'com.google.android.gms:play-services-drive:19.0.0'
     implementation 'com.google.oauth-client:google-auth-library-oauth2-http:1.2.0'
