--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,11 @@ android {
         exclude 'META-INF/groovy/org.codehaus.groovy.runtime.ExtensionModule'
         exclude 'META-INF/groovy-release-info.properties'
         exclude 'META-INF/INDEX.LIST'
+        exclude "META-INF/DEPENDENCIES"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_16
-        targetCompatibility JavaVersion.VERSION_16
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 }
 
@@ -39,12 +40,10 @@ dependencies {
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
-    implementation 'com.google.apis:google-api-services-drive:v3-rev20211207-1.32.1'
-    implementation 'com.google.android.gms:play-services-drive:19.0.0'
-    implementation 'com.google.oauth-client:google-auth-library-oauth2-http:1.2.0'
-    implementation 'net.fortuna.ical4j:ical4j-data:3.0.27'
-    //noinspection UseOfBundledGooglePlayServices
-    implementation 'com.google.android.gms:play-services:19.0.0'
+    implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'
+    implementation 'org.mnode.ical4j:ical4j:3.2.10'
     implementation 'com.google.http-client:google-http-client-jackson2:1.43.0'
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
@@ -57,6 +56,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'org.mnode.ical4j:ical4j:3.0.27'
 }
 
