--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'
     implementation 'org.mnode.ical4j:ical4j:3.2.10'
-    implementation 'com.google.http-client:google-http-client-jackson2:1.43.0'
+
+    implementation 'com.google.api-client:google-api-client-gson:2.2.0'
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -53,6 +54,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
+    runtimeOnly 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
