--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 dependencies {
     implementation 'com.google.api-client:google-api-client:2.2.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
